src/objects/FC_Invoice_Item_Revenue_Share__c.object
<CustomObject>
    <fields>
        <fullName>Allocated_Amount__c</fullName>
        <label>Allocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_Geography__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allocated Geography</label>
        <referenceTo>MetroclientGeography__c</referenceTo>
        <relationshipLabel>(FC) Invoice Item Revenue Shares</relationshipLabel>
        <relationshipName>FC_Invoice_Item_Revenue_Shares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allocated_MRR__c</fullName>
        <formula>CASE(Invoice_Item__r.Billing_Frequency__c , 
    &quot;Annual&quot;,  Allocated_Amount__c / 12, 
    &quot;Semi-Annual&quot;, Allocated_Amount__c / 6,
    &quot;Quarter&quot;, Allocated_Amount__c / 3,
    &quot;Month&quot;, Allocated_Amount__c / 1,
    0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocated MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocation_Percentage__c</fullName>
        <label>Allocation %</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Charge_Number__c</fullName>
        <formula>Invoice_Item__r.fziiss__ChargeNumber__c</formula>
        <label>Charge Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <formula>Allocated_Amount__c * 0.08</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Item_Last_Modified_Date__c</fullName>
        <label>Invoice Item Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoice_Item__c</fullName>
        <label>Invoice Item</label>
        <referenceTo>fziiss__Invoice_Item__c</referenceTo>
        <relationshipLabel>(FC) Invoice Item Revenue Shares</relationshipLabel>
        <relationshipName>FC_Invoice_Item_Revenue_Shares</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Obsolete__c</fullName>
        <formula>Invoice_Item__r.fziiss__UpdatedDate__c != Invoice_Item_Last_Modified_Date__c</formula>
        <label>Obsolete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed_By_Batchable_On__c</fullName>
        <label>Processed By Batchable On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RD_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RD Assignment</label>
        <referenceTo>MetrostudySalesRegionAssignment__c</referenceTo>
        <relationshipLabel>(FC) Invoice Item Revenue Shares</relationshipLabel>
        <relationshipName>FC_Invoice_Item_Revenue_Shares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RD__c</fullName>
        <formula>TRIM(RD_Assignment__r.User__r.FirstName &amp; &quot; &quot; &amp; RD_Assignment__r.User__r.LastName)</formula>
        <label>RD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_2__c</fullName>
        <label>Segment 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>(FC) Invoice Item Revenue Share</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>(FC) Invoice Item Revenue Share Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>(FC) Invoice Item Revenue Shares</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>